rota verificar calendario e valores
